--- a/English/irregular.html
+++ b/English/irregular.html
@@ -5,6 +5,6 @@
    <link rel="stylesheet" href="friends.css">
   <title>Pract</title>
 </head>
-<body>
-  <h1>Irregular verbs</h1>
- 
+ <html>
+  <body>
+    <h1 id="bio">Irregular verbs</h1>
