--- a/English/irregular.html
+++ b/English/irregular.html
@@ -9,4 +9,85 @@
   <body>
     <h1 id="bio">Irregular verbs</h1>
 
-     <p><a id="back" href="words.html">Назад на головну</a></p>
+     <p><a id="back" href="words.html">Назад на Words</a></p>
+
+    <h2>Group 1</h2>
+    
+    <table border="3">
+<thead>
+    <tr>
+      <th>Simple form</th>
+      <th>Simple past</th>
+      <th>Past participle</th>
+      <th>Переклад</th>
+    </tr>
+  </thead>
+  <tbody>
+ <tr>
+      <td>ring</td>
+      <td>rang</td>
+      <td>rung</td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>sing</td>
+      <td>sang</td>
+      <td>sung</td>
+    </tr>
+    <tr>
+      <td>sink</td>
+      <td>sank</td>
+      <td>sunk</td>
+    </tr>
+    <tr>
+      <td>drink</td>
+      <td>drank</td>
+      <td>drunk</td>
+    </tr>
+    <tr>
+      <td>shrink</td>
+      <td>shrank</td>
+      <td>shrunk</td>
+    </tr>
+    <tr>
+      <td>swim</td>
+      <td>swam</td>
+      <td>swum</td>
+    </tr>
+    <tr>
+      <td>begin</td>
+      <td>began</td>
+      <td>begun</td>
+    </tr>
+    <tr>
+      <td>run</td>
+      <td>ran</td>
+      <td>run</td>
+    </tr>
+</tbody>
+</table>
+
+    <h2>Group 2</h2>
+    <table border="3">
+<thead>
+    <tr>
+      <th>Simple form</th>
+      <th>Simple past</th>
+      <th>Past participle</th>
+    </tr>
+  </thead>
+  <tbody>
+ <tr>
+      <td>feed</td>
+      <td>fed</td>
+      <td>fed</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+</tbody>
+</table>
+  </body>
+ </html>
