--- a/English/irregular.html
+++ b/English/irregular.html
@@ -83,9 +83,77 @@
       <td>fed</td>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td>lead</td>
+      <td>led</td>
+      <td>led</td>
+    </tr>
+    <tr>
+      <td>breed</td>
+      <td>bred</td>
+      <td>bred</td>
+    </tr>
+    <tr>
+      <td>read</td>
+      <td>read</td>
+      <td>read</td>
+    </tr>
+    <tr>
+      <td>sell</td>
+      <td>sold</td>
+      <td>sold</td>
+    </tr>
+    <tr>
+      <td>tell</td>
+      <td>told</td>
+      <td>told</td>
+    </tr>
+    <tr>
+      <td>slide</td>
+      <td>slid</td>
+      <td>slid</td>
+    </tr>
+    <tr>
+      <td>hold</td>
+      <td>held</td>
+      <td>held</td>
+    </tr>
+</tbody>
+</table>
+
+    <h2>Group 3</h2>
+    <table border="3">
+<thead>
+    <tr>
+      <th>Simple form</th>
+      <th>Simple past</th>
+      <th>Past participle</th>
+    </tr>
+  </thead>
+  <tbody>
+ <tr>
+      <td>hit</td>
+      <td>hit</td>
+      <td>hit</td>
+    </tr>
+    <tr>
+      <td>fit</td>
+      <td>fit</td>
+      <td>fit</td>
+    </tr>
+    <tr>
+      <td>spit</td>
+      <td>spit (spat)</td>
+      <td>spit (spat)</td>
+    </tr>
+    <tr>
+      <td>knit</td>
+      <td>knit (knitted)</td>
+      <td>knit (knitted)</td>
+    </tr>
+    <tr>
+      <td>quit</td>
+      <td>quit</td>
+      <td>quit</td>
     </tr>
 </tbody>
 </table>
