--- a/English/irregular.html
+++ b/English/irregular.html
@@ -121,6 +121,7 @@
 </table>
 
     <h2>Group 3</h2>
+    
     <table border="3">
 <thead>
     <tr>
@@ -155,7 +156,211 @@
       <td>quit</td>
       <td>quit</td>
     </tr>
+    <tr>
+      <td>let</td>
+      <td>let</td>
+      <td>let</td>
+    </tr>
+    <tr>
+      <td>set</td>
+      <td>set</td>
+      <td>set</td>
+    </tr>
+    <tr>
+      <td>upset</td>
+      <td>upset</td>
+      <td>upset</td>
+    </tr>
+    <tr>
+      <td>shut</td>
+      <td>shut</td>
+      <td>shut</td>
+    </tr>
+    <tr>
+      <td>cut</td>
+      <td>cut</td>
+      <td>cut</td>
+    </tr>
+    <tr>
+      <td>put</td>
+      <td>put</td>
+      <td>put</td>
+    </tr>
+    <tr>
+      <td>cost</td>
+      <td>cost</td>
+      <td>cost</td>
+    </tr>
+    <tr>
+      <td>hurt</td>
+      <td>hurt</td>
+      <td>hurt</td>
+    </tr>
+    <tr>
+      <td>spread</td>
+      <td>spread</td>
+      <td>spread</td>
+    </tr>
+    <tr>
+      <td>broadcast</td>
+      <td>broadcast</td>
+      <td>broadcast</td>
+    </tr>
 </tbody>
 </table>
+
+    <h2>Group 4</h2>
+
+    <table border="3">
+<thead>
+    <tr>
+      <th>Simple form</th>
+      <th>Simple past</th>
+      <th>Past participle</th>
+    </tr>
+  </thead>
+  <tbody>
+ <tr>
+      <td>buy</td>
+      <td>bought</td>
+      <td>bought</td>
+    </tr>
+    <tr>
+      <td>fight</td>
+      <td>fought</td>
+      <td>fought</td>
+    </tr>
+    <tr>
+      <td>seek</td>
+      <td>sought</td>
+      <td>sought</td>
+    </tr>
+    <tr>
+      <td>think</td>
+      <td>thought</td>
+      <td>thought</td>
+    </tr>
+    <tr>
+      <td>bring</td>
+      <td>brought</td>
+      <td>brought</td>
+    </tr>
+    <tr>
+      <td>teach</td>
+      <td>taught</td>
+      <td>taught</td>
+    </tr>
+    <tr>
+      <td>catch</td>
+      <td>caught</td>
+      <td>caught</td>
+    </tr>
+</tbody>
+</table>
+
+    <h2>Group 5</h2>
+
+    <table border="3">
+<thead>
+    <tr>
+      <th>Simple form</th>
+      <th>Simple past</th>
+      <th>Past participle</th>
+    </tr>
+  </thead>
+  <tbody>
+ <tr>
+      <td>bend</td>
+      <td>bent</td>
+      <td>bent</td>
+    </tr>
+    <tr>
+      <td>send</td>
+      <td>sent</td>
+      <td>sent</td>
+    </tr>
+    <tr>
+      <td>lend</td>
+      <td>lent</td>
+      <td>lent</td>
+    </tr>
+    <tr>
+      <td>spend</td>
+      <td>spent</td>
+      <td>spent</td>
+    </tr>
+    <tr>
+      <td>build</td>
+      <td>built</td>
+      <td>built</td>
+    </tr>
+    <tr>
+      <td>sleep</td>
+      <td>slept</td>
+      <td>slept</td>
+    </tr>
+    <tr>
+      <td>keep</td>
+      <td>kept</td>
+      <td>kept</td>
+    </tr>
+    <tr>
+      <td>creep</td>
+      <td>crept</td>
+      <td>crept</td>
+    </tr>
+    <tr>
+      <td>weep</td>
+      <td>wept</td>
+      <td>wept</td>
+    </tr>
+    <tr>
+      <td>sweep</td>
+      <td>swept</td>
+      <td>swept</td>
+    </tr>
+    <tr>
+      <td>leap</td>
+      <td>leapt (leaped)</td>
+      <td>leapt (leaped)</td>
+    </tr>
+    <tr>
+      <td>feel</td>
+      <td>felt</td>
+      <td>felt</td>
+    </tr>
+    <tr>
+      <td>mean</td>
+      <td>meant</td>
+      <td>meant</td>
+    </tr>
+    <tr>
+      <td>dream</td>
+      <td>dreamt (dreamed)</td>
+      <td>dreamt (dreamed)</td>
+    </tr>
+    <tr>
+      <td>meet</td>
+      <td>met</td>
+      <td>met</td>
+    </tr>
+    <tr>
+      <td>leave</td>
+      <td>left</td>
+      <td>left</td>
+    </tr>
+    <tr>
+      <td>lose</td>
+      <td>lost</td>
+      <td>lost</td>
+    </tr>
+    <tr>
+      <td>burn</td>
+      <td>burnt (burned)</td>
+      <td>burnt (burned)</td>
+    </tr>
+</tbody>
+</table>
+    
   </body>
  </html>
