--- a/English/food.html
+++ b/English/food.html
@@ -6,13 +6,11 @@
    <title> Pract </title>
   </head>
   <body>
-    <h1 id="bio">Irregular verbs</h1>
+    <h1 id="bio">Food and drink</h1>
 
 <nav>
 <p><a href="words.html">Назад на Words</a></p>
 </nav>
-
- <h2>Food and drink</h2>
       
       <h3>Everyday food</h3>
       
