--- a/English/irregular.html
+++ b/English/irregular.html
@@ -361,6 +361,411 @@
     </tr>
 </tbody>
 </table>
-    
+
+    <h2>Group 6</h2>
+
+    <table border="3">
+<thead>
+    <tr>
+      <th>Simple form</th>
+      <th>Simple past</th>
+      <th>Past participle</th>
+    </tr>
+  </thead>
+  <tbody>
+ <tr>
+      <td>hang</td>
+      <td>hung</td>
+      <td>hung</td>
+    </tr>
+     <tr>
+      <td>hang (to kill)</td>
+      <td>hanged</td>
+      <td>hanged</td>
+    </tr>
+    <tr>
+      <td>dig</td>
+      <td>dug</td>
+      <td>dug</td>
+    </tr>
+    <tr>
+      <td>shoot</td>
+      <td>shot</td>
+      <td>shot</td>
+    </tr>
+    <tr>
+      <td>stand</td>
+      <td>stood</td>
+      <td>stood</td>
+    </tr>
+    <tr>
+      <td>understand</td>
+      <td>understood</td>
+      <td>understood</td>
+    </tr>
+    <tr>
+      <td>stick</td>
+      <td>stuck</td>
+      <td>stuck</td>
+    </tr>
+    <tr>
+      <td>strike</td>
+      <td>struck</td>
+      <td>struck</td>
+    </tr>
+    <tr>
+      <td>sit</td>
+      <td>sat</td>
+      <td>sat</td>
+    </tr>
+    <tr>
+      <td>win</td>
+      <td>won</td>
+      <td>won</td>
+    </tr>
+    <tr>
+      <td>make</td>
+      <td>made</td>
+      <td>made</td>
+    </tr>
+    <tr>
+      <td>pay</td>
+      <td>paid</td>
+      <td>paid</td>
+    </tr>
+    <tr>
+      <td>lay</td>
+      <td>laid</td>
+      <td>laid</td>
+    </tr>
+    <tr>
+      <td>say</td>
+      <td>said</td>
+      <td>said</td>
+    </tr>
+    <tr>
+      <td>light</td>
+      <td>lit (lighted)</td>
+      <td>lit (lighted)</td>
+    </tr>
+    <tr>
+      <td>find</td>
+      <td>found</td>
+      <td>found</td>
+    </tr>
+    <tr>
+      <td>found</td>
+      <td>founded</td>
+      <td>founded</td>
+    </tr>
+  </tbody>
+    </table>
+
+    <h2>Group 7</h2>
+
+     <table border="3">
+<thead>
+    <tr>
+      <th>Simple form</th>
+      <th>Simple past</th>
+      <th>Past participle</th>
+    </tr>
+  </thead>
+  <tbody>
+ <tr>
+      <td>throw</td>
+      <td>threw</td>
+      <td>thrown</td>
+    </tr>
+    <tr>
+      <td>grow</td>
+      <td>grew</td>
+      <td>grown</td>
+    </tr>
+    <tr>
+      <td>blow</td>
+      <td>blew</td>
+      <td>blown</td>
+    </tr>
+    <tr>
+      <td>draw</td>
+      <td>drew</td>
+      <td>drawn</td>
+    </tr>
+    <tr>
+      <td>withdraw</td>
+      <td>withdrew</td>
+      <td>withdrawn</td>
+    </tr>
+    <tr>
+      <td>fly</td>
+      <td>flew</td>
+      <td>flown</td>
+    </tr>
+    <tr>
+      <td>know</td>
+      <td>knew</td>
+      <td>known</td>
+    </tr>
+  </tbody>
+    </table>
+
+    <h2>Group 8</h2>
+
+     <table border="3">
+<thead>
+    <tr>
+      <th>Simple form</th>
+      <th>Simple past</th>
+      <th>Past participle</th>
+    </tr>
+  </thead>
+  <tbody>
+ <tr>
+      <td>write</td>
+      <td>wrote</td>
+      <td>written</td>
+    </tr>
+    <tr>
+      <td>choose</td>
+      <td>chose</td>
+      <td>chosen</td>
+    </tr>
+    <tr>
+      <td>freeze</td>
+      <td>froze</td>
+      <td>frozen</td>
+    </tr>
+    <tr>
+      <td>speak</td>
+      <td>spoke</td>
+      <td>spoken</td>
+    </tr>
+    <tr>
+      <td>awake</td>
+      <td>awoke</td>
+      <td>awoken</td>
+    </tr>
+    <tr>
+      <td>break</td>
+      <td>broke</td>
+      <td>broken</td>
+    </tr>
+    <tr>
+      <td>steal</td>
+      <td>stole</td>
+      <td>stolen</td>
+    </tr>
+    <tr>
+      <td>ride</td>
+      <td>rode</td>
+      <td>ridden</td>
+    </tr>
+    <tr>
+      <td>rise</td>
+      <td>rose</td>
+      <td>risen</td>
+    </tr>
+    <tr>
+      <td>shake</td>
+      <td>shook</td>
+      <td>shaken</td>
+    </tr>
+    <tr>
+      <td>take</td>
+      <td>took</td>
+      <td>taken</td>
+    </tr>
+    <tr>
+      <td>overtake</td>
+      <td>overtook</td>
+      <td>overtaken</td>
+    </tr>
+    <tr>
+      <td>mistake</td>
+      <td>mistook</td>
+      <td>mistaken</td>
+    </tr>
+    <tr>
+      <td>fall</td>
+      <td>fell</td>
+      <td>fallen</td>
+    </tr>
+    <tr>
+      <td>forget</td>
+      <td>forgot</td>
+      <td>forgotten</td>
+    </tr>
+    <tr>
+      <td>hide</td>
+      <td>hid</td>
+      <td>hidden</td>
+    </tr>
+    <tr>
+      <td>shave</td>
+      <td>shaved</td>
+      <td>shaven (shaved)</td>
+    </tr>
+    <tr>
+      <td>bite</td>
+      <td>bit</td>
+      <td>bitten</td>
+    </tr>
+    <tr>
+      <td>beat</td>
+      <td>beat</td>
+      <td>beaten</td>
+    </tr>
+    <tr>
+      <td>swear</td>
+      <td>swore</td>
+      <td>sworn</td>
+    </tr>
+    <tr>
+      <td>tear</td>
+      <td>tore</td>
+      <td>torn</td>
+    </tr>
+    <tr>
+      <td>wear</td>
+      <td>wore</td>
+      <td>worn</td>
+    </tr>
+    <tr>
+      <td>weave</td>
+      <td>wove</td>
+      <td>woven</td>
+    </tr>
+    <tr>
+      <td>forbid</td>
+      <td>forbade</td>
+      <td>forbidden</td>
+    </tr>
+    <tr>
+      <td>give</td>
+      <td>gave</td>
+      <td>given</td>
+    </tr>
+    <tr>
+      <td>forgive</td>
+      <td>forgave</td>
+      <td>forgiven</td>
+    </tr>
+    <tr>
+      <td>drive</td>
+      <td>drove</td>
+      <td>driven</td>
+    </tr>
+    <tr>
+      <td>eat</td>
+      <td>ate</td>
+      <td>eaten</td>
+    </tr>
+    <tr>
+      <td>get</td>
+      <td>got</td>
+      <td>got (gotten)</td>
+    </tr>
+    <tr>
+      <td>prove</td>
+      <td>proved</td>
+      <td>proven (proved)</td>
+    </tr>
+    <tr>
+      <td>show</td>
+      <td>showed</td>
+      <td>shown</td>
+    </tr>
+    <tr>
+      <td>wake</td>
+      <td>woke (waked)</td>
+      <td>woken (waked)</td>
+    </tr>
+  </tbody>
+    </table>
+
+    <h2>Group 9</h2>
+
+     <table border="3">
+<thead>
+    <tr>
+      <th>Simple form</th>
+      <th>Simple past</th>
+      <th>Past participle</th>
+    </tr>
+  </thead>
+  <tbody>
+ <tr>
+      <td>dive</td>
+      <td>dived/dove</td>
+      <td>dived</td>
+    </tr>
+    <tr>
+      <td>do</td>
+      <td>did</td>
+      <td>done</td>
+    </tr>
+    <tr>
+      <td>go</td>
+      <td>went</td>
+      <td>gone</td>
+    </tr>
+    <tr>
+      <td>hear</td>
+      <td>heard</td>
+      <td>heard</td>
+    </tr>
+    <tr>
+      <td>have</td>
+      <td>had</td>
+      <td>had</td>
+    </tr>
+    <tr>
+      <td>am, is, are</td>
+      <td>was, were</td>
+      <td>been</td>
+    </tr>
+    <tr>
+      <td>come</td>
+      <td>came</td>
+      <td>come</td>
+    </tr>
+    <tr>
+      <td>become</td>
+      <td>became</td>
+      <td>become</td>
+    </tr>
+    <tr>
+      <td>overcome</td>
+      <td>overcame</td>
+      <td>overcome</td>
+    </tr>
+    <tr>
+      <td>see</td>
+      <td>saw</td>
+      <td>seen</td>
+    </tr>
+    <tr>
+      <td>saw</td>
+      <td>sawed</td>
+      <td>sawn (sawed)</td>
+    </tr>
+    <tr>
+      <td>lie</td>
+      <td>lied</td>
+      <td>lied</td>
+    </tr>
+    <tr>
+      <td>lie</td>
+      <td>lay</td>
+      <td>lain</td>
+    </tr>
+    <tr>
+      <td>lay</td>
+      <td>laid</td>
+      <td>laid</td>
+    </tr>
+  </tbody>
+    </table>
   </body>
  </html>
