--- a/English/irregular.html
+++ b/English/irregular.html
@@ -27,42 +27,49 @@
       <td>ring</td>
       <td>rang</td>
       <td>rung</td>
-      <td></td>
+      <td>каблучка</td>
     </tr>
     <tr>
       <td>sing</td>
       <td>sang</td>
       <td>sung</td>
+      <td>співати</td>
     </tr>
     <tr>
       <td>sink</td>
       <td>sank</td>
       <td>sunk</td>
+      <td>раковина</td>
     </tr>
     <tr>
       <td>drink</td>
       <td>drank</td>
       <td>drunk</td>
+      <td>пити</td>
     </tr>
     <tr>
       <td>shrink</td>
       <td>shrank</td>
       <td>shrunk</td>
+      <td>скорочуватися</td>
     </tr>
     <tr>
       <td>swim</td>
       <td>swam</td>
       <td>swum</td>
+      <td>плавати</td>
     </tr>
     <tr>
       <td>begin</td>
       <td>began</td>
       <td>begun</td>
+      <td>почати</td>
     </tr>
     <tr>
       <td>run</td>
       <td>ran</td>
       <td>run</td>
+      <td>бігати</td>
     </tr>
 </tbody>
 </table>
@@ -74,6 +81,7 @@
       <th>Simple form</th>
       <th>Simple past</th>
       <th>Past participle</th>
+      <th>Переклад</th>
     </tr>
   </thead>
   <tbody>
@@ -81,41 +89,49 @@
       <td>feed</td>
       <td>fed</td>
       <td>fed</td>
+   <td>годувати</td>
     </tr>
     <tr>
       <td>lead</td>
       <td>led</td>
       <td>led</td>
+      <td>вести</td>
     </tr>
     <tr>
       <td>breed</td>
       <td>bred</td>
       <td>bred</td>
+      <td>порода</td>
     </tr>
     <tr>
       <td>read</td>
       <td>read</td>
       <td>read</td>
+      <td>читати</td>
     </tr>
     <tr>
       <td>sell</td>
       <td>sold</td>
       <td>sold</td>
+      <td>продати</td>
     </tr>
     <tr>
       <td>tell</td>
       <td>told</td>
       <td>told</td>
+      <td>розповідати</td>
     </tr>
     <tr>
       <td>slide</td>
       <td>slid</td>
       <td>slid</td>
+      <td>слайд</td>
     </tr>
     <tr>
       <td>hold</td>
       <td>held</td>
       <td>held</td>
+      <td>утримувати</td>
     </tr>
 </tbody>
 </table>
@@ -135,76 +151,91 @@
       <td>hit</td>
       <td>hit</td>
       <td>hit</td>
+   <td>удар</td>
     </tr>
     <tr>
       <td>fit</td>
       <td>fit</td>
       <td>fit</td>
+      <td>підходить</td>
     </tr>
     <tr>
       <td>spit</td>
       <td>spit (spat)</td>
       <td>spit (spat)</td>
+      <td>плюнути</td>
     </tr>
     <tr>
       <td>knit</td>
       <td>knit (knitted)</td>
       <td>knit (knitted)</td>
+      <td>в'язати</td>
     </tr>
     <tr>
       <td>quit</td>
       <td>quit</td>
       <td>quit</td>
+      <td>кинути</td>
     </tr>
     <tr>
       <td>let</td>
       <td>let</td>
       <td>let</td>
+      <td>дозволяти</td>
     </tr>
     <tr>
       <td>set</td>
       <td>set</td>
       <td>set</td>
+      <td>встановити</td>
     </tr>
     <tr>
       <td>upset</td>
       <td>upset</td>
       <td>upset</td>
+      <td>засмучений</td>
     </tr>
     <tr>
       <td>shut</td>
       <td>shut</td>
       <td>shut</td>
+      <td>закрити</td>
     </tr>
     <tr>
       <td>cut</td>
       <td>cut</td>
       <td>cut</td>
+      <td>вирізати</td>
     </tr>
     <tr>
       <td>put</td>
       <td>put</td>
       <td>put</td>
+      <td>поставити</td>
     </tr>
     <tr>
       <td>cost</td>
       <td>cost</td>
       <td>cost</td>
+      <td>вартість</td>
     </tr>
     <tr>
       <td>hurt</td>
       <td>hurt</td>
       <td>hurt</td>
+      <td>боляче</td>
     </tr>
     <tr>
       <td>spread</td>
       <td>spread</td>
       <td>spread</td>
+      <td>поширення</td>
     </tr>
     <tr>
       <td>broadcast</td>
       <td>broadcast</td>
       <td>broadcast</td>
+      <td>трансляція</td>
     </tr>
 </tbody>
 </table>
