--- a/English/irregular.html
+++ b/English/irregular.html
@@ -144,6 +144,7 @@
       <th>Simple form</th>
       <th>Simple past</th>
       <th>Past participle</th>
+      <th>Переклад</th>
     </tr>
   </thead>
   <tbody>
