--- a/English/index.html
+++ b/English/index.html
@@ -6,6 +6,7 @@
     <title> Pract </title>
   </head>
   <body>
+    <img src="C:\Users\Admin\Pictures\Сайт"/>
     <h1>Let's learn English together</h1>
     
   <p>Отже, нижче представлені заголовки сторінок, а саме: </p>
