--- a/English/index.html
+++ b/English/index.html
@@ -6,7 +6,9 @@
     <title> Pract </title>
   </head>
   <body>
-    <img src="imageGrammar/background.png" alt="Зображення">
+    <img 
+      class="background"
+      src="imageGrammar/background.png" alt="Зображення">
     <h1>Let's learn English together</h1>
     
   <p>Отже, нижче представлені заголовки сторінок, а саме: </p>
