--- a/English/index.html
+++ b/English/index.html
@@ -8,7 +8,7 @@
   <body>
     <img 
       class="background"
-      src="imageGrammar/background.png" alt="Зображення">
+      src="imageGrammar/background.png" alt="Зображення"/>
     <h1>Let's learn English together</h1>
     
   <p>Отже, нижче представлені заголовки сторінок, а саме: </p>
